# opencv_learning

./: CMakeLists.txt  Makefile
scripts/: chart.py  test_caps.py
src/: main.cpp
src/basic/: CMakeLists.txt  basic_drawing.cpp  blur.cpp  erosion_dilatation.cpp  hit_or_miss.cpp  morph_lines_detection.cpp  opening_closing_hats.cpp  random.cpp
src/basic/include/: basic_drawing.hpp  random.hpp
src/basic/include/basic/: basic_drawing.hpp  blur.hpp  erosion_dilatation.hpp  hit_or_miss.hpp  morph_lines_detection.hpp  opening_closing_hats.hpp  random.hpp
src/cuda/: CMakeLists.txt  cuda_gauss.cpp  cuda_info.cpp
src/cuda/include/cuda/: cuda_gauss.hpp
src/isa/: CMakeLists.txt
src/isa/include/isa/: info_entropy.hpp  laplacian.hpp  max_min.hpp  roberts.hpp  smd.hpp  smd2.hpp  tenengrad.hpp  var.hpp
src/transformations/: CMakeLists.txt  canny.cpp  copy_make_border.cpp  filter_2d.cpp  laplace.cpp  sobel_derivatives.cpp
src/transformations/include/transformations/: canny.hpp  copy_make_border.hpp  filter_2d.hpp  laplace.hpp  sobel_derivatives.hpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: timer.hpp
